tests/ui/hygiene/privacy.stderr
error[E0603]: function `f` is private
  --> $DIR/privacy.rs:17:14
   |
LL |         foo::f()
   |              ^ private function
   |
note: the function `f` is defined here
  --> $DIR/privacy.rs:5:5
   |
LL |     fn f() {}
   |     ^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
